--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "date-fns": "^2.16.1",
     "express": "^4.17.1",
     "uuid": "^8.3.0"
   }
